--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,7 @@ img{
 }
 
 body{
+	font-family: sans-serif;
 	font-size: 24px;
 	line-height: 36px;
 }
@@ -237,6 +238,7 @@ h1{
 .workList{
 	width: 667px;
 	border-left: 1px solid #96A9C4;
+	margin-left: 24px;
 }
 
 .workList li{
